# Masterthesis_SGH

./: .coverage  .gitignore  AGENT_NOTES.md  Makefile  README.md  area_analysis.py  check_fields.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_processor.py
.cursor/: setup_rules.py
.cursor/rules/: 000-structure.mdc
.cursor/web/: 071-components.mdc  072-services.mdc  073-routes.mdc  074-state.mdc  075-api.mdc
archive/: citygml_fetcher copy.py  osm_building_fetcher.py  osm_street_fetcher.py
archive/cfg/: project_config.yml
archive/local/: .coverage  .gitignore  __init__.py
archive/utils/: config_manager.py  (+5 more)
cli/: run_cea.py  run_citygml.py
config/: global.yml  mapping.yml
core/: __init__.py  config_manager.py  logging_config.py  project_manager.py  project_paths.py
docs/: configuration.md
local/: __init__.py  requirements.txt  run_cea copy.py  run_cea.py  temp_workflow.yml
outputs/: buildings_raw.gpkg
pipeline/: __init__.py  orchestrator.py
scripts/: convert_citygml.py
sgh_master.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: __init__.py  conftest.py  core  test_building_classifier.py  test_cea_mapper.py  test_cea_mapping.py  test_cea_processing.py  test_citygml_processor.py  test_config.py  test_config.yml  test_config_loader.py  test_integration.py  test_osm_building_fetcher.py  test_osm_config.py  test_osm_integration.py  test_osm_street_fetcher.py  test_project_manager.py  test_site_polygon.py  test_wfs_integration.py
web/: .gitignore  delete_duplicates.ps1  package-lock.json  package.json  vite.config.ts
(+458 files in other folders)
