[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sgh-master"
version = "0.1.0"
authors = [
    { name="Your Name", email="your.email@example.com" },
]
description = "SGH Master Project"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/sgh-master"
"Bug Tracker" = "https://github.com/yourusername/sgh-master/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"
log_cli = true
log_cli_level = "INFO" 